adds contact, buy sell page

--- a/client/src/pages/HomePage/styles.css
+++ b/client/src/pages/HomePage/styles.css
@@ -12,3 +12,24 @@
 img{
     margin : 0px;
 }
+
+.main-box {
+  border: 1px solid black;
+  margin: 1rem;
+  padding: 2rem 2rem;
+  text-align: center;
+}
+
+.boxed-1 {
+  display: inline-block;
+  border: 1px solid red;
+  padding: 1rem 1rem;
+  vertical-align: middle; 
+}
+.boxed-2{
+  display: inline-block;
+  border: 1px solid red;
+  padding: 1rem 1rem;
+  vertical-align: middle;
+}
+
