--- a/client/src/components/YouTubeTicker/styles.css
+++ b/client/src/components/YouTubeTicker/styles.css
@@ -1,3 +1,4 @@
+
 .promo {
      border: 1px solid black;
      margin: 1rem;
@@ -7,33 +8,84 @@
      /* width : 800px; */
      font-size: 75px;
      font-family: 'Cardo', serif;
-     color :grey;
-     background-color : rgb(106, 99, 99);
+     color: grey;
+     background-color: rgb(106, 99, 99);
      display: flex;
-     padding-left : 400px;
-   
-   }
+     padding-left: 400px;
 
-   #youtube{
-     width: 10%;
-     /* height: 10%; */
-     margin: 20px;
-     color: black;
-   }
+}
 
 
- 
-
-   @keyframes ticker-kf {
-50% {
-       transform: translate3d(0, 0, 0);
+@keyframes ticker-kf {
+     50% {
+          transform: translate3d(0, 0, 0);
      }
-   
+
      100% {
-       transform: translate3d(-108rem, 0, 0);
+          transform: translate3d(-108rem, 0, 0);
      }
-   }
-   
-   .img-ticker {
+}
+
+.img-ticker {
      animation: ticker-kf 2s linear reverse;
-   }
+}
+
+
+
+@media all and (min-width: 380px) and (max-width: 768px) { 
+
+     .promo {
+          border: 1px solid black;
+          margin: 1rem;
+          padding: 2rem 2rem;
+          /* padding-left : 290px; */
+          text-align: left;
+          /* width : 800px; */
+          font-size: 75px;
+          font-family: 'Cardo', serif;
+          color: grey;
+          background-color: rgb(106, 99, 99);
+          display: flex;
+          padding-left: 400px;
+     
+     }
+
+    .promo { display: none; }  /*   Hide You tube ticker */
+     .promo_small { display: block;
+     
+          border: 1px solid black;
+          margin: 1rem;
+          padding: 2rem 2rem;
+          /* padding-left : 290px; */
+          text-align: left;
+          /* width : 800px; */
+          font-size: 75px;
+          font-family: 'Cardo', serif;
+          color: grey;
+          background-color: rgb(106, 99, 99);
+          display: flex;
+          padding-left: 400px;
+     
+     }  /* show it on small screens */
+   
+
+}
+
+@media  (max-width: 3000px) { 
+     .promo_small { display: none; }   
+ 
+ }
+
+
+#youtube {
+     width: 12%;
+     /* height: 10%; */
+     margin: 10px;
+     color: black;
+}
+
+
+
+
+
+
